--- a/dashboard/src/app/ide/ide.styl
+++ b/dashboard/src/app/ide/ide.styl
@@ -1,4 +1,20 @@
 .ide-page-frame
   width 100%
-  height 100%
+  height 100vh
   border none
+
+.open-ide-page
+  position relative
+  color $white-color
+
+.ide-page-loader
+  position absolute
+  top 0
+  bottom 0
+  left 0
+  right 0
+  margin auto
+
+.ide-page-loader-content
+  width 120px
+  height 120px
