Use opencompose format in custom stack creation section
Signed-off-by: Ann Shumilova <ashumilova@codenvy.com>

--- a/dashboard/src/app/workspaces/list-workspaces/workspace-item/workspace-item.html
+++ b/dashboard/src/app/workspaces/list-workspaces/workspace-item/workspace-item.html
@@ -43,7 +43,7 @@
       </div>
       <div flex-gt-xs="33"
            class="workspace-consumed-value">
-        {{workspaceItemCtrl.getDefaultEnvironment(workspaceItemCtrl.workspace).machineConfigs[0].limits.ram}} MB
+        {{workspaceItemCtrl.getDefaultEnvironment(workspaceItemCtrl.workspace).machines[0].limits.ram}} MB
       </div>
     </div>
 
