--- a/dashboard/src/app/workspaces/create-workspace/select-stack/recipe/workspace-recipe.html
+++ b/dashboard/src/app/workspaces/create-workspace/select-stack/recipe/workspace-recipe.html
@@ -2,26 +2,26 @@
   <div class="stack-label-info">Bring your own stack.</div>
   <ng-form name="workspaceInformationForm">
     <md-radio-group ng-model="workspaceRecipeCtrl.selectSourceOption" ng-change="workspaceRecipeCtrl.setDefaultData()">
-      <div layout="row" flex="100">
-        <div layout="column" flex="50">
+      <div layout="column" flex="100">
+        <div layout="column">
           <md-radio-button value="upload-custom-stack">Import custom stack</md-radio-button>
           <div layout="row" layout-wrap>
             <div ng-if="workspaceRecipeCtrl.selectSourceOption === 'upload-custom-stack'" class="recipe-url">
-              <che-label-container che-label-name="Recipe URL">
+              <che-label-container che-label-name="Open Compose URL">
                 <che-input che-form="workspaceInformationForm"
                             che-name="url"
-                            che-place-holder="URL of the Recipe"
+                            che-place-holder="URL of the open compose file"
                             che-pattern="(^((ftp|http|https)://[\w@.\-\_]+(:\d{1,5})?(/[\w#!:.?+=&%@!\_\-/]+)*){1}$)"
                             ng-model="workspaceRecipeCtrl.recipeUrl"
                             ng-maxlength="255">
-                  <div ng-message="maxlength">The name has to be less than 255 characters long.</div>
+                  <div ng-message="maxlength">The URL has to be less than 255 characters long.</div>
                   <div ng-message="pattern">URL is not valid.</div>
                 </che-input>
               </che-label-container>
             </div>
           </div>
         </div>
-        <div layout="column" flex="50">
+        <div layout="column">
           <md-radio-button value="edit-your-stack">
             Write your own stack
           </md-radio-button>
