--- a/dashboard/src/app/workspaces/create-workspace/select-stack/recipe/workspace-recipe.styl
+++ b/dashboard/src/app/workspaces/create-workspace/select-stack/recipe/workspace-recipe.styl
@@ -1,3 +1,5 @@
+.recipe-widget
+  margin-left 10px
 
 .recipe-widget md-radio-button
   outline 0
@@ -10,11 +12,10 @@
 .recipe-editor
   width 100%
   margin-top 20px
-  margin-left 30px
-  margin-bottom 25px
 
 .recipe-editor .CodeMirror
   border 1px solid $list-separator-color
+  min-height 500px
 
 .recipe-docs-link
   margin-top -15px
@@ -23,3 +24,4 @@
 
 .recipe-widget .recipe-url
   width calc(100% - 10px)
+  margin-bottom 20px
